# training-center

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agents/skills/cleanup/: SKILL.md
.agents/skills/pr/: SKILL.md
.claude/skills/pr/: SKILL.md
.github/workflows/: ci.yml
src/training_center/: curriculum_pool.py  elo.py  env_factory.py  export_onnx.py  game.py  metadata.py  metrics.py  model_config.py  opponent_pool.py  policy_config.py
src/training_center/eval/: elo.py  match.py  opponent_pool.py
src/training_center/pool/: __init__.py  common.py  curriculum.py  opponent.py
src/training_center/scripts/: evaluate.py  evaluate_roundrobin.py  train_baseline.py  train_crossplay.py  train_curriculum.py  train_ppo.py  train_selfplay.py  utils.py
tests/: test_curriculum_pool.py  test_elo.py  test_env_factory.py  test_eval_result.py  test_metrics.py  test_model_config.py  test_opponent_pool.py  test_policy_config.py
