[project]
name = "training-center"
version = "1.0.0"
description = "RL training pipeline for alphachu-volleyball"
readme = "README.md"
authors = [
    { name = "namho kwon", email = "ootzk@kakao.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pika-zoo @ git+https://github.com/alphachu-volleyball/pika-zoo@v1.1.0",
    "stable-baselines3>=2.4.0",
    "wandb>=0.19.0",
]

[project.scripts]
train-baseline = "training_center.scripts.train_baseline:main"
train-selfplay = "training_center.scripts.train_selfplay:main"
evaluate = "training_center.scripts.evaluate:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
