[project]
name = "training-center"
version = "1.0.0"
description = "RL training pipeline for alphachu-volleyball"
readme = "README.md"
authors = [
    { name = "namho kwon", email = "ootzk@kakao.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pika-zoo @ git+https://github.com/alphachu-volleyball/pika-zoo@v1.5.0",
    "stable-baselines3>=2.4.0",
    "wandb>=0.19.0",
    "onnx>=1.14.0",
    "huggingface-hub>=0.30.0",
]

[project.scripts]
train-baseline = "training_center.scripts.train_baseline:main"
train-crossplay = "training_center.scripts.train_crossplay:main"
train-curriculum = "training_center.scripts.train_curriculum:main"
evaluate-roundrobin = "training_center.scripts.evaluate_roundrobin:main"
compute-elo = "training_center.elo:main"
export-onnx = "training_center.export_onnx:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[project.optional-dependencies]
rendering = [
    "pika-zoo[rendering] @ git+https://github.com/alphachu-volleyball/pika-zoo@v1.5.0",
]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["training_center"]
known-third-party = ["wandb"]

[dependency-groups]
dev = [
    "plotly>=6.6.0",
]
